@startuml database_schema
!theme plain

skinparam roundcorner 8
skinparam shadowing false
skinparam defaultFontName "Helvetica, Arial, sans-serif"
skinparam defaultFontSize 12

skinparam class { 
    BackgroundColor #FFFFFF
    ArrowColor #2C3E50
    BorderColor #2C3E50
    HeaderBackgroundColor #EAEDED 
}

entity "users" as users {
    * id : INTEGER <<PK, auto>>
    --
    * email : VARCHAR(255) <<UQ, idx>>
    * hashed_password : VARCHAR(255)
    * full_name : VARCHAR(255)
    * is_active : BOOLEAN [DEF TRUE]
    * is_superuser : BOOLEAN [DEF FALSE]
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "categories" as categories {
    * id : INTEGER <<PK, auto>>
    --
    * name : VARCHAR(100) <<UQ, idx>>
    * slug : VARCHAR(100) <<UQ, idx>>
    description : TEXT <<null>>
    * display_order : INTEGER [DEF 0]
    * is_active : BOOLEAN [DEF TRUE]
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "menu_items" as menu_items {
    * id : INTEGER <<PK, auto>>
    --
    * category_id : INTEGER <<FK, idx>>
    * name : VARCHAR(150) <<idx>>
    description : TEXT <<null>>
    * price : NUMERIC(10, 2)
    image_url : VARCHAR(500) <<null>>
    * is_available : BOOLEAN [DEF TRUE, idx]
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "orders" as orders {
    * id : INTEGER <<PK, auto>>
    --
    * user_id : INTEGER <<FK, idx>>
    * status : VARCHAR(20) [enum, idx]
    * total_amount : NUMERIC(10, 2)
    notes : TEXT <<null>>
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "order_items" as order_items {
    * id : INTEGER <<PK, auto>>
    --
    * order_id : INTEGER <<FK, idx>>
    * menu_item_id : INTEGER <<FK, idx>>
    * quantity : INTEGER [DEF 1]
    * unit_price : NUMERIC(10, 2)
    * item_name : VARCHAR(150)
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

categories ||--o{ menu_items : "1:N (CASCADE)"
users ||--o{ orders : "1:N (CASCADE)"
orders ||--|{ order_items : "1:N (CASCADE)"
menu_items ||--o{ order_items : "1:N (RESTRICT)"

note bottom of users : <b>RBAC:</b> is_superuser=TRUE\nнадає доступ до АРМ бариста.
note bottom of menu_items : <b>Стоп-лист:</b> is_available=FALSE\nблокує нові замовлення.
note bottom of order_items : <b>Snapshot:</b> unit_price/item_name\nфіксують ціну на момент покупки.

@enduml